fixed spacing in the header of images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.5;
+    background-color: rgb(28, 216, 230);
   }
 
   h1 { font-family: 'Times New Roman', 'Georgia', 'Garamond';
@@ -16,7 +17,8 @@
   h2 {
 
   }
-  h3 {}
+  h3 {color: white;
+  }
   h4 {}
   h5 {
 
@@ -35,8 +37,9 @@
   background-image: url(../images/jumbotron-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height:auto;
+  height: 40vh;
 padding: none;
+margin-bottom: 0px !important;
 }
 .profileImg {
   max-height: 150px;
@@ -57,12 +60,18 @@ padding: none;
   justify-content: flex-end;
   
 }
+
+
 .subtitle {
   background-image: url(../images/banner2.jpg);
-  height: 50%;
+  height: 26vh;
+  margin: 0;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0%;
+  object-fit: cover;
+  display:flex;
+  justify-content: center;
+}
   
 
-}
+
